added the navigation bar html elements

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="page-container">
+        <div class="nav-bar">
+            <img class = "logo" src="Images/Smavators-LOgo2.png" alt="">
+            <ul>
+                <li>Home</li>
+                <li>Services</li>
+                <li>Projects</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+            <img class = "user-icon" src="Images/white-filled-user 2.png" alt="">
+            <img class = "toggle" src="Images/Toggle.png" alt="">
+        </div>
+    </div>
     
 </body>
 </html>
