--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="page-container">
+    <div class="home-container">
         <div class="nav-bar">
             <img class = "logo" src="Images/Smavators-LOgo2.png" alt="">
             <ul>
