Style and edit my navigation bar

--- a/Index.html
+++ b/Index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Smavators</title>
 </head>
 <body>
     <div class="home-container">
         <div class="nav-bar">
-            <img class = "logo" src="Images/Smavators-LOgo2.png" alt="">
-            <ul>
-                <li>Home</li>
-                <li>Services</li>
-                <li>Projects</li>
-                <li>About</li>
-                <li>Contact</li>
+            <a href=""> <img class= "Logo" src="images/Smavators-LOgo2.png" alt="Business Logo"></a>
+            <ul id = "nav-menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
-            <img class = "user-icon" src="Images/white-filled-user 2.png" alt="">
             <img class = "toggle" src="Images/Toggle.png" alt="">
+        </div>
+        <div class="Landing-Pic">
+            <img class="Bg-pic" src="images/Smavators-bg.svg" alt="">
+            <h1>Innovative Solutions To Your Business Problems</h1>
         </div>
     </div>
     
